# advent-of-code-2020

./: .gitignore  build-all-rust.sh
day1/: README.md  day1  day1.hs
day1/c/: day1.c
day1/haskell/: day1.hs
day1/rust-day1/: Cargo.toml
day1/rust-day1/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs  parser.rs
day13/: Cargo.toml
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: main.rs
day18/: Cargo.toml
day18/src/: main.rs
day19/: Cargo.toml
day19/src/: main.rs
day2/day2-rust/: Cargo.toml
day2/day2-rust/src/: main.rs  parser.rs
day20/: Cargo.toml
day20/src/: main.rs
day21/: Cargo.toml
day21/src/: main.rs
day22/: Cargo.toml
day22/src/: main.rs
day23/: .gitignore  Cargo.toml  day23  day23.c
day23/src/: main.rs
day24/: Cargo.toml
day24/src/: main.rs
day25/: Cargo.toml
day25/src/: main.rs
day3/day3-rust/: Cargo.toml
day3/day3-rust/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs  parser.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: main.rs  parser.rs
day8/: Cargo.toml
day8/src/: main.rs  parser.rs
day9/: Cargo.toml
day9/src/: main.rs
geom/: Cargo.toml
geom/src/: lib.rs
parser/src/: lib.rs
