[package]
name = "day20"
version = "0.1.0"
authors = ["Neil Gall <neil@gall.scot>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.11"
env_logger = "0.8.2"
strum = "0.20.0"
strum_macros = "0.20.0"
parser = { path = "../parser" }
